--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,7 +9,7 @@ plugins {
 }
 
 android {
-    namespace = "com.innoride.innoridedriver"
+    namespace = "com.innodrivers"
     compileSdk = 35
     ndkVersion = flutter.ndkVersion
 
@@ -24,7 +24,7 @@ android {
     }
 
     defaultConfig {
-        applicationId = "com.innoride.innoridedriver"   
+        applicationId = "com.innodrivers"
         minSdk =  21
         targetSdk = 34
         versionCode = flutter.versionCode
@@ -43,7 +43,7 @@ android {
 }
 
 dependencies {
-        coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.3'
+        coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
 }
 
 flutter {
